--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/inter": "^4.5.15"
+		"@fontsource/inter": "^4.5.15",
+		"@vercel/analytics": "^0.1.8"
 	}
 }
