--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/inter": "^4.5.15",
-		"@vercel/analytics": "^0.1.8"
+		"@fontsource/inter": "^4.5.15"
 	}
 }
